<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/registration_fragment_arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/register_user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:shapeAppearance="@style/shapeableImageView"
            app:srcCompat="@drawable/add_user_image" />

        <!-- app:srcCompat="@drawable/register_user_image" -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Регистрация"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/darkBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_register_username"
            android:textColorHint="@color/darkBlue"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/darkBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/darkBlue"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/lightGrey"
            app:hintTextColor="@color/darkBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_first"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/darkBlue"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/lightGrey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/darkBlue"
            app:hintTextColor="@color/darkBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_edit_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_second"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="Повторите пароль"
            android:textColorHint="@color/darkBlue"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/lightGrey"
            app:endIconTint="@color/darkBlue"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/darkBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_edit_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:textColor="@color/darkBlue"
            app:strokeColor="@color/yellow" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>